Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>BCOoLExamples</h1>
-        <h2>The project contains examples of the operators in BCOoL. After compiled, operators can be used to generate the coordination between models. Examples of operators are: synchronized product between Timed Finite State Machine (TFSM), synchronized product between TFSM and Activity diagramas. Please visit  http://timesquare.inria.fr/BCOoL for further information.</h2>
+        <h2>The project contains examples of the operators in BCOoL. After compiled, an operators can be used to generate the model of coordination between models. Examples of operators are: synchronized product between Timed Finite State Machine (TFSM), synchronized product between TFSM and Activity diagramas. For further information, go to http://timesquare.inria.fr/BCOoL </h2>
         <a href="https://github.com/MatiasVara/BCOoLExamples" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
@@ -31,8 +31,7 @@
           <h1>
 <a id="bcoolexamples" class="anchor" href="#bcoolexamples" aria-hidden="true"><span class="octicon octicon-link"></span></a>BCOoLExamples</h1>
 
-<p>This contains BCOoL examples which includes the specification of a BCOoL operator plus a model. The BCOoL specification can be used to coordinate the example models.
-<a href="http://timesquare.inria.fr/BCOoL">BCOoL site</a></p>
+<p>This contains BCOoL examples which includes the specification of a BCOoL operator plus a model. The BCOoL specification can be used to coordinate the example models.</p>
         </section>
 
         <aside id="sidebar">
