--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>BCOoLExamples</h1>
-        <h2>The project contains examples of the operators in BCOoL. After compiled, an operators can be used to generate the model of coordination between models. Examples of operators are: synchronized product between Timed Finite State Machine (TFSM), synchronized product between TFSM and Activity diagramas. For further information, go to http://timesquare.inria.fr/BCOoL </h2>
+        <h2>The project contains examples of operators specified by using BCOoL. After compiled, operators can be used to generate the model of coordination between models. Examples of operators are: synchronized product between Timed Finite State Machine (TFSM), synchronized product between TFSM and Activity diagrams and more. For further information, go to http://timesquare.inria.fr/BCOoL </h2>
         <a href="https://github.com/MatiasVara/BCOoLExamples" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
